Feature extraction: added distance of trip

--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "from datetime import datetime, timedelta\n",
     "import requests\n",
     "import ssl\n",
+    "from geopy.distance import geodesic\n",
     "\n",
     "ssl._create_default_https_context = ssl._create_unverified_context\n",
     "\n"
@@ -18,139 +19,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "def get_weather_data(lat, lon, start_date, end_date):\n",
-    "    location = Point(lat, lon)\n",
-    "    data = Daily(location, start_date, end_date)\n",
-    "    data = data.fetch()\n",
-    "    return data\n",
     "\n",
-    "# Load your dataset\n",
-    "nb_df = pd.read_csv('../data/processed/nb_cleaned.csv')\n",
+    "completed_orders= pd.read_csv('../data/processed/nb_cleaned.csv')\n",
+    "delivery_requests = pd.read_csv('../data/processed/location_cleaned.csv')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_df[['Trip Origin Lat', 'Trip Origin Lng']] = nb_df['Trip Origin'].str.split(',', expand=True).astype(float)\n",
-    "nb_df[['Trip Destination Lat', 'Trip Destination Lng']] = nb_df['Trip Destination'].str.split(',', expand=True).astype(float)\n",
+    "def parse_coordinates(address):\n",
+    "    \"\"\"\n",
+    "    Parse the address to extract latitude and longitude.\n",
+    "    :param address: String in the format \"latitude, longitude\"\n",
+    "    :return: Tuple containing (latitude, longitude)\n",
+    "    \"\"\"\n",
+    "    # Clean up the address string\n",
+    "    address = address.strip()  # Remove leading and trailing whitespace\n",
+    "    lat, lng = map(float, address.split(','))  # Split and convert to float\n",
+    "    return lat, lng\n",
     "\n",
-    "nb_df['Trip Start Time'] = pd.to_datetime(nb_df['Trip Start Time'])\n",
-    "nb_df['Trip End Time'] = pd.to_datetime(nb_df['Trip End Time'])\n",
-    "\n"
+    "\n",
+    "# Apply the function to the Trip Origin and Trip Destination columns\n",
+    "completed_orders[['Origin Lat', 'Origin Lng']] = completed_orders['Trip Origin'].apply(parse_coordinates).apply(pd.Series)\n",
+    "completed_orders[['Destination Lat', 'Destination Lng']] = completed_orders['Trip Destination'].apply(parse_coordinates).apply(pd.Series)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "weather_conditions = []\n",
-    "nb_df= nb_df.head(100)\n",
-    "for index, row in nb_df.iterrows():\n",
-    "    lat, lon = row['Trip Origin Lat'], row['Trip Origin Lng']\n",
-    "    start_date = row['Trip Start Time']\n",
-    "    end_date = start_date + timedelta(days=1)  \n",
-    "    \n",
-    "    weather_data = get_weather_data(lat, lon, start_date, end_date)\n",
-    "    \n",
-    "    if not weather_data.empty:\n",
-    "        rain = weather_data['prcp'].iloc[0] > 0  \n",
-    "        weather_conditions.append('Rain' if rain else 'No Rain')\n",
-    "    else:\n",
-    "        weather_conditions.append('No Data')\n",
-    "\n",
-    "nb_df['Weather Condition'] = weather_conditions\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    Unnamed: 0  Trip ID                           Trip Origin  \\\n",
-      "0            0   391996    6.508813001668548,3.37740316890347   \n",
-      "1            1   391997                   6.4316714,3.4555375   \n",
-      "2            2   391998           6.631679399999999,3.3388976   \n",
-      "3            3   391999           6.572757200000001,3.3677082   \n",
-      "4            4   392001                   6.6010417,3.2766339   \n",
-      "..         ...      ...                                   ...   \n",
-      "95          95   392195   6.492950899999999,3.380802399999999   \n",
-      "96          96   392198  6.601994249890971,3.3489699769657477   \n",
-      "97          97   392199                   6.5058143,3.3883071   \n",
-      "98          98   392200                    6.4357433,3.438317   \n",
-      "99          99   392203                   6.5715416,3.4973193   \n",
+      "   Unnamed: 0  Trip ID                         Trip Origin  \\\n",
+      "0           0   391996  6.508813001668548,3.37740316890347   \n",
+      "1           1   391997                 6.4316714,3.4555375   \n",
+      "2           2   391998         6.631679399999999,3.3388976   \n",
+      "3           3   391999         6.572757200000001,3.3677082   \n",
+      "4           4   392001                 6.6010417,3.2766339   \n",
       "\n",
-      "                        Trip Destination     Trip Start Time  \\\n",
-      "0            6.650969799999999,3.3450307 2021-07-01 07:28:04   \n",
-      "1        6.4280814653326,3.4721885847586 2021-07-01 06:38:04   \n",
-      "2            6.508324099999999,3.3590397 2021-07-01 06:21:02   \n",
-      "3            6.584881099999999,3.3614073 2021-07-01 07:16:07   \n",
-      "4                    6.4501069,3.3916154 2021-07-01 09:30:59   \n",
-      "..                                   ...                 ...   \n",
-      "95            6.460190000000001,3.555131 2021-07-01 08:22:13   \n",
-      "96  6.457202273160995,3.3805135270195876 2021-07-01 08:22:50   \n",
-      "97            6.603262099999999,3.377432 2021-07-01 08:15:22   \n",
-      "98        6.455391343655,3.3829452094897 2021-07-01 08:23:27   \n",
-      "99                   6.4948489,3.3578813 2021-07-01 08:21:54   \n",
+      "                  Trip Destination      Trip Start Time        Trip End Time  \\\n",
+      "0      6.650969799999999,3.3450307  2021-07-01 07:28:04  2021-07-01 07:29:37   \n",
+      "1  6.4280814653326,3.4721885847586  2021-07-01 06:38:04  2021-07-01 07:07:28   \n",
+      "2      6.508324099999999,3.3590397  2021-07-01 06:21:02  2021-07-01 07:02:23   \n",
+      "3      6.584881099999999,3.3614073  2021-07-01 07:16:07  2021-07-01 07:29:42   \n",
+      "4              6.4501069,3.3916154  2021-07-01 09:30:59  2021-07-01 09:34:36   \n",
       "\n",
-      "         Trip End Time  Trip Origin Lat  Trip Origin Lng  \\\n",
-      "0  2021-07-01 07:29:37         6.508813         3.377403   \n",
-      "1  2021-07-01 07:07:28         6.431671         3.455538   \n",
-      "2  2021-07-01 07:02:23         6.631679         3.338898   \n",
-      "3  2021-07-01 07:29:42         6.572757         3.367708   \n",
-      "4  2021-07-01 09:34:36         6.601042         3.276634   \n",
-      "..                 ...              ...              ...   \n",
-      "95 2021-07-01 09:13:26         6.492951         3.380802   \n",
-      "96 2021-07-01 09:16:06         6.601994         3.348970   \n",
-      "97 2021-07-01 08:22:07         6.505814         3.388307   \n",
-      "98 2021-07-01 08:56:22         6.435743         3.438317   \n",
-      "99 2021-07-01 09:57:43         6.571542         3.497319   \n",
-      "\n",
-      "    Trip Destination Lat  Trip Destination Lng Weather Condition  \n",
-      "0               6.650970              3.345031           No Rain  \n",
-      "1               6.428081              3.472189           No Rain  \n",
-      "2               6.508324              3.359040           No Rain  \n",
-      "3               6.584881              3.361407           No Rain  \n",
-      "4               6.450107              3.391615           No Rain  \n",
-      "..                   ...                   ...               ...  \n",
-      "95              6.460190              3.555131           No Rain  \n",
-      "96              6.457202              3.380514           No Rain  \n",
-      "97              6.603262              3.377432           No Rain  \n",
-      "98              6.455391              3.382945           No Rain  \n",
-      "99              6.494849              3.357881           No Rain  \n",
-      "\n",
-      "[100 rows x 11 columns]\n"
+      "   Origin Lat  Origin Lng  Destination Lat  Destination Lng  trip_distance  \n",
+      "0    6.508813    3.377403         6.650970         3.345031      16.123451  \n",
+      "1    6.431671    3.455538         6.428081         3.472189       1.884305  \n",
+      "2    6.631679    3.338898         6.508324         3.359040      13.822393  \n",
+      "3    6.572757    3.367708         6.584881         3.361407       1.511034  \n",
+      "4    6.601042    3.276634         6.450107         3.391615      20.984319  \n"
      ]
     }
    ],
    "source": [
-    "nb_df.to_csv('../data/processed/nb_with_weather_conditions.csv', index=False)\n",
     "\n",
-    "print(nb_df.head(100))"
+    "def calculate_distance(row):\n",
+    "    origin = (row['Origin Lat'], row['Origin Lng'])\n",
+    "    destination = (row['Destination Lat'], row['Destination Lng'])\n",
+    "    return geodesic(origin, destination).kilometers\n",
+    "\n",
+    "completed_orders['trip_distance'] = completed_orders.apply(calculate_distance, axis=1)\n",
+    "\n",
+    "print(completed_orders.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "completed_orders.to_csv('../data/processed/nb_cleaned.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Origin Lat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/Desktop/python/Logistic-optimization-with-casual-inference/.venv/lib/python3.8/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32m~/Desktop/python/Logistic-optimization-with-casual-inference/.venv/lib/python3.8/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/Desktop/python/Logistic-optimization-with-casual-inference/.venv/lib/python3.8/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Origin Lat'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[48], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(geodesic(origin, destination)\u001b[38;5;241m.\u001b[39mkilometers)\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m geodesic(origin, destination)\u001b[38;5;241m.\u001b[39mkilometers\n\u001b[0;32m----> 9\u001b[0m \u001b[43mcalculate_distance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdelivery_requests\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Apply the function to calculate distances\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# completed_orders['Trip Distance'] = completed_orders.apply(calculate_distance, axis=1)\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# # Inspect the updated dataframe\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# print(completed_orders.head())\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[48], line 5\u001b[0m, in \u001b[0;36mcalculate_distance\u001b[0;34m(row)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalculate_distance\u001b[39m(row):\n\u001b[0;32m----> 5\u001b[0m     origin \u001b[38;5;241m=\u001b[39m (\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mOrigin Lat\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOrigin Lng\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      6\u001b[0m     destination \u001b[38;5;241m=\u001b[39m (row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDest Lat\u001b[39m\u001b[38;5;124m'\u001b[39m], row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDest Lng\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(geodesic(origin, destination)\u001b[38;5;241m.\u001b[39mkilometers)\n",
+      "File \u001b[0;32m~/Desktop/python/Logistic-optimization-with-casual-inference/.venv/lib/python3.8/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3808\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/Desktop/python/Logistic-optimization-with-casual-inference/.venv/lib/python3.8/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Origin Lat'"
+     ]
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.calculate_distance(row)>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -169,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
