Feature: merged the dataset and found time taken and speed

--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -754,6 +754,221 @@
     "delivery_requests = pd.read_csv('delivery_requests_with_distances.csv')\n",
     "delivery_requests.head(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1557740 entries, 0 to 1557739\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                    Non-Null Count    Dtype  \n",
+      "---  ------                    --------------    -----  \n",
+      " 0   Unnamed: 0                1557740 non-null  int64  \n",
+      " 1   id                        1557740 non-null  int64  \n",
+      " 2   order_id                  1557740 non-null  int64  \n",
+      " 3   driver_id                 1557740 non-null  int64  \n",
+      " 4   driver_action             1557740 non-null  object \n",
+      " 5   lat                       1557740 non-null  float64\n",
+      " 6   lng                       1557740 non-null  float64\n",
+      " 7   driver_to_order_distance  1555718 non-null  float64\n",
+      " 8   Trip ID                   1555718 non-null  float64\n",
+      " 9   Origin Lat                1555718 non-null  float64\n",
+      " 10  Origin Lng                1555718 non-null  float64\n",
+      "dtypes: float64(6), int64(4), object(1)\n",
+      "memory usage: 130.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "delivery_requests.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 534368 entries, 0 to 534367\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column            Non-Null Count   Dtype  \n",
+      "---  ------            --------------   -----  \n",
+      " 0   Unnamed: 0        534368 non-null  int64  \n",
+      " 1   Trip ID           534368 non-null  int64  \n",
+      " 2   Trip Origin       534368 non-null  object \n",
+      " 3   Trip Destination  534368 non-null  object \n",
+      " 4   Trip Start Time   534368 non-null  object \n",
+      " 5   Trip End Time     534368 non-null  object \n",
+      " 6   Origin Lat        534368 non-null  float64\n",
+      " 7   Origin Lng        534368 non-null  float64\n",
+      " 8   Destination Lat   534368 non-null  float64\n",
+      " 9   Destination Lng   534368 non-null  float64\n",
+      " 10  trip_distance     534368 non-null  float64\n",
+      "dtypes: float64(5), int64(2), object(4)\n",
+      "memory usage: 44.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "completed_orders.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = pd.merge(delivery_requests, completed_orders[['Trip ID', 'Trip Start Time', 'Trip End Time', 'trip_distance']],\n",
+    "                    on='Trip ID', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.loc[merged_df['driver_action'] == 'rejected', ['Trip Start Time', 'Trip End Time', 'trip_distance']] = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df['Trip Start Time'] = pd.to_datetime(merged_df['Trip Start Time'])\n",
+    "merged_df['Trip End Time'] = pd.to_datetime(merged_df['Trip End Time'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df['time_taken'] = (merged_df['Trip End Time'] - merged_df['Trip Start Time']).dt.total_seconds()\n",
+    "merged_df['speed'] = merged_df['trip_distance'] / merged_df['time_taken']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id</th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>driver_id</th>\n",
+       "      <th>driver_action</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>driver_to_order_distance</th>\n",
+       "      <th>Trip ID</th>\n",
+       "      <th>Origin Lat</th>\n",
+       "      <th>Origin Lng</th>\n",
+       "      <th>Trip Start Time</th>\n",
+       "      <th>Trip End Time</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>time_taken</th>\n",
+       "      <th>speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>392001</td>\n",
+       "      <td>243828</td>\n",
+       "      <td>accepted</td>\n",
+       "      <td>6.602207</td>\n",
+       "      <td>3.270465</td>\n",
+       "      <td>694.263614</td>\n",
+       "      <td>392001.0</td>\n",
+       "      <td>6.601042</td>\n",
+       "      <td>3.276634</td>\n",
+       "      <td>2021-07-01 09:30:59</td>\n",
+       "      <td>2021-07-01 09:34:36</td>\n",
+       "      <td>20.984319</td>\n",
+       "      <td>217.0</td>\n",
+       "      <td>0.096702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>392001</td>\n",
+       "      <td>243588</td>\n",
+       "      <td>rejected</td>\n",
+       "      <td>6.592097</td>\n",
+       "      <td>3.287445</td>\n",
+       "      <td>1551.694105</td>\n",
+       "      <td>392001.0</td>\n",
+       "      <td>6.601042</td>\n",
+       "      <td>3.276634</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  id  order_id  driver_id driver_action       lat       lng  \\\n",
+       "0           0   1    392001     243828      accepted  6.602207  3.270465   \n",
+       "1           1   2    392001     243588      rejected  6.592097  3.287445   \n",
+       "\n",
+       "   driver_to_order_distance   Trip ID  Origin Lat  Origin Lng  \\\n",
+       "0                694.263614  392001.0    6.601042    3.276634   \n",
+       "1               1551.694105  392001.0    6.601042    3.276634   \n",
+       "\n",
+       "      Trip Start Time       Trip End Time  trip_distance  time_taken     speed  \n",
+       "0 2021-07-01 09:30:59 2021-07-01 09:34:36      20.984319       217.0  0.096702  \n",
+       "1 1970-01-01 00:00:00 1970-01-01 00:00:00       0.000000         0.0       NaN  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
